--- a/.github/workflows/readme-daily.yml
+++ b/.github/workflows/readme-daily.yml
@@ -2,7 +2,7 @@ name: Update Profile README Daily
 
 on:
   schedule:
-    - cron: "0 0 * * *"   # every day at 00:00 UTC
+    - cron: "0 * * * *"   # run every hour (UTC)
   workflow_dispatch:       # allow manual runs
 
 jobs:
@@ -20,11 +20,50 @@ jobs:
         with:
           node-version: "20"
 
-      - name: Generate daily content
+      - name: Generate content (hourly; commit only 6–10 times/day)
         run: |
           cat > update.js <<'EOF'
           import fs from 'fs/promises';
 
+          // ========= Commit frequency guard (6–10 random hours per day) =========
+          // Deterministically pick a random set of hours for *today* (UTC).
+          function xorshift(seed) {
+            let x = seed | 0;
+            return () => {
+              x ^= x << 13; x ^= x >>> 17; x ^= x << 5;
+              return (x >>> 0) / 0xFFFFFFFF;
+            };
+          }
+
+          const now = new Date();
+          const y = now.getUTCFullYear();
+          const m = String(now.getUTCMonth() + 1).padStart(2, '0');
+          const d = String(now.getUTCDate()).padStart(2, '0');
+          const dayKey = `${y}${m}${d}`;      // e.g., 20250923
+          const hour = now.getUTCHours();     // 0..23
+
+          // Seed RNG with today's key so hours change daily but are stable within the day
+          let seed = 0;
+          for (const ch of dayKey) seed = (seed * 31 + ch.charCodeAt(0)) | 0;
+          const rand = xorshift(seed);
+
+          // Choose a daily quota between 6 and 10
+          const quota = 6 + Math.floor(rand() * 5); // 6,7,8,9,10
+
+          // Shuffle hours [0..23] and take the first `quota` as commit hours
+          const hours = [...Array(24).keys()];
+          for (let i = hours.length - 1; i > 0; i--) {
+            const j = Math.floor(rand() * (i + 1));
+            [hours[i], hours[j]] = [hours[j], hours[i]];
+          }
+          const commitHours = new Set(hours.slice(0, quota));
+
+          if (!commitHours.has(hour)) {
+            console.log(`Skip commit this hour (UTC hour=${hour}); quota=${quota}/day; commit hours=${[...commitHours].sort((a,b)=>a-b).join(',')}`);
+            process.exit(0); // Exit early so nothing changes/commits
+          }
+
+          // ===================== Your original updater logic =====================
           // Simple helpers
           const nowUtc = () => new Date().toISOString().replace('T', ' ').replace(/\..+/, '') + ' UTC';
           const clamp = (s) => s?.toString().trim().replace(/\s+/g, ' ') || '';
@@ -45,7 +84,6 @@ jobs:
           const updated = `Last updated: ${nowUtc()}`;
 
           // 2) Random Quote (Quotable)
-          // Docs: https://api.quotable.io
           let quoteBlock = 'Could not load quote today.';
           try {
             const q = await fetchJSON('https://api.quotable.io/random');
@@ -55,15 +93,13 @@ jobs:
           } catch (e) { /* ignore */ }
 
           // 3) Joke of the day (JokeAPI)
-          // Docs: https://v2.jokeapi.dev/
           let jokeBlock = 'Could not load a joke today.';
           try {
             const j = await fetchJSON('https://v2.jokeapi.dev/joke/Any?type=single&safe-mode');
             jokeBlock = j?.joke ? j.joke.replace(/\s+/g, ' ') : jokeBlock;
           } catch (e) { /* ignore */ }
 
-          // 4) Latest Blog Posts from RSS (set BLOG_RSS env)
-          // Very lightweight XML parsing (no dependencies). Works for most simple RSS.
+          // 4) Latest Blog Posts from RSS (optional)
           let blogBlock = '- (no RSS configured)';
           const rssUrl = process.env.BLOG_RSS;
           if (rssUrl) {
@@ -99,7 +135,7 @@ jobs:
           out = replaceSection(out, 'blog', blogBlock);
 
           await fs.writeFile('README.md', out, 'utf8');
-          console.log('README.md updated.');
+          console.log('README.md updated (hour allowed).');
           EOF
 
           node update.js
@@ -113,5 +149,5 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add README.md
-          git commit -m "chore: daily README update"
+          git commit -m "chore: hourly randomized update"
           git push
