--- a/.github/workflows/readme-daily.yml
+++ b/.github/workflows/readme-daily.yml
@@ -103,22 +103,29 @@ jobs:
           node update.js
 
       - name: Commit changes
+        env:
+          GH_NAME: ${{ github.repository_owner }}
+          GH_EMAIL: ${{ vars.MY_GH_EMAIL }}   # repo variable (non-sensitive)
         run: |
           set -e
           echo "Branch: $(git branch --show-current || echo 'detached HEAD')"
           git status --porcelain
           git diff --unified=0 README.md || true
-
-          # Author as you (counts as your contribution)
-          git config user.name "${{ github.actor }}"
-          git config user.email "${{ github.actor }}@users.noreply.github.com"
-
+      
+          git config user.name "$GH_NAME"
+          git config user.email "$GH_EMAIL"
+          export GIT_AUTHOR_NAME="$GH_NAME"
+          export GIT_AUTHOR_EMAIL="$GH_EMAIL"
+          export GIT_COMMITTER_NAME="$GH_NAME"
+          export GIT_COMMITTER_EMAIL="$GH_EMAIL"
+      
           if git diff --quiet; then
             echo "No changes to commit."
             exit 0
           fi
-
+      
           git add README.md
           git commit -m "chore: hourly randomized update"
           git pull --rebase origin main || true
           git push origin HEAD:main
+      
